fixed a  small bug that stops the code from working as intented